--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -5,7 +5,7 @@
 	
 	<div class="pagecontent">
 		<div class="row">		
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			<div class="dnone card-container col-sm-3 col-md-3">
 				<div class="card">
 					<div class="bg-dashboard">
 						<div class="bg-transparent doorbg">
@@ -18,9 +18,8 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
 					<div class="noback bg-blue">						
@@ -40,9 +39,8 @@
 					</div>
 					</a>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.door.doors">
 					<div class="noback bg-slategray lt">						
@@ -62,9 +60,8 @@
 					</div>
 					</a>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
 					<div class="noback bg-lightred">						
@@ -91,50 +88,39 @@
 			<div class="col-md-12">
 				<section class="tile box-shadow" fullscreen="isFullscreen06">
 					<div class="tile-header dvd dvd-btm">
-						<h1 class="custom-font"><strong>{{page.title}}</strong></h1>
+						<h1 class="custom-font">{{page.title}}</h1>
 						<ul class="controls">
 							<li class="addpopup">
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
-										<form role="form" ng-validate="validationOptions" name="create_door" ng-submit="createDoor(door, create_door)">
+										<form ng-validate="validationOptions" name="create_door" ng-submit="createDoor(door, create_door)" role="form">
 											<div class="modal-header"><h4 class="modal-title custom-font">Create Door</h4></div>
 											<div class="modal-body">	
-											<span class="error">{{doormsg}}</span>
 												<div class="row">
-													<div class="col-md-6 first">
-														<div class="form-group">
-															<label for="">Name</label>
-															<input type="text" name="" id="" class="form-control mb-10" placeholder="" ng-model="door.name" required>
-														</div>
+													<div class="form-group col-sm-6 col-md-6 first">
+														<label for="">Name</label>
+														<input type="text" name="" id="" class="form-control" ng-model="door.name" placeholder="">
 													</div>
-													<div class="col-md-6 last">
-														<div class="form-group">
-															<label for="">Facility</label><br/>
-															<select class="form-control" disabled>
-																<option selected>USA Corporate Services</option>
-																<option>Aerzen USA Corporation</option>
-															</select>
-														</div>
+													<div class="form-group col-sm-6 col-md-6 last">
+														<label for="">Facility</label><br/>
+														<select class="form-control" disabled>
+															<option selected>USA Corporate Services</option>
+															<option>Aerzen USA Corporation</option>
+														</select>
 													</div>
 												</div>
-												<div class="form-group">
-													<label for="description">Description</label>
-													<textarea name="description" id="" class="form-control mb-10" placeholder=""  ng-model="door.description" required></textarea>
-												</div>
 												<div class="row">
-													<div class="col-md-6 first">
-														<div class="form-group">
-															<label for="">Device Type</label><br/>
-															<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-																<label class="btn btn-default" ng-model="door.status" uib-btn-radio="1">Active</label>
-																<label class="btn btn-default" ng-model="door.status" uib-btn-radio="0">Inactive</label>
-															</div>
+													<div class="form-group col-sm-6 col-md-6 first">
+														<label for="">Device Type</label><br/>
+														<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
+															<label class="btn btn-default" ng-model="door.status" uib-btn-radio="1">Active</label>
+															<label class="btn btn-default" ng-model="door.status" uib-btn-radio="0">Inactive</label>
 														</div>
 													</div>
 												</div>
 											</div>
 											<div class="modal-footer">
-												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
+												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" id="close" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
 												<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
 											</div>
 										</form>		
@@ -147,8 +133,8 @@
 					
 					<div class="hometabs">
 						<div class="tile-body table-custom">
-							<div class="row pos-r mb-20">
-								<div class="col-md-3 filterorder">
+							<div class="row pos-r mb-40">
+								<div class="col-sm-3 col-md-3 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -161,19 +147,36 @@
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-6">
+								<div class="col-sm-6 col-md-6">
 									<div class="row">
-										<div class="col-md-9 search">
-											<input type="text" class="form-control" ng-model="searchText" ng-keyup="searchFunction($event)" placeholder="Search by text....">
-											<button class="btn btn-default  br-2-r" type="button" ng-click="searchFunction()">Search</button>
+										<div class="col-sm-8 col-md-9 search">
+											<input type="text" class="form-control" placeholder="Search by text....">
+											<button class="btn btn-default br-2-r" type="button">Search</button>
 										</div>
-										<div class="col-md-3 profilephoto csvupload">
-											<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
-											<span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
+										<div class="col-sm-4 col-md-3 profilephoto csvupload">
+											<div ng-controller="ModalDemo1Ctrl">
+												<script type="text/ng-template" id="myModalContent1.html">
+													<form name="form1" role="form">
+														<div class="modal-header"><h4 class="modal-title custom-font">Upload CSV File</h4></div>
+														<div class="modal-body mt-5 pb-30 mb-40">
+															<label for="">Upload CSV file</label>
+															<div class="profilephoto">
+																<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+																<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
+															</div>											
+														</div>
+														<div class="modal-footer">
+															<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Cancel</button>
+															<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Save</button>	
+														</div>
+													</form>		
+												</script>
+												<span ng-click="open()" class="group-span-filestyle input-group-btn"><label class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
+											</div>
 										</div>
 									</div>
 								</div>
-								<div class="col-md-3">
+								<div class="col-sm-3 col-md-3">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
@@ -181,19 +184,19 @@
 									</div>
 								</div>
 								<div class="filterfields" ng-hide="filtershow">
-									<div class="col-md-3">
+									<div class="col-sm-3 col-md-3">
 										<label for="fbtext" class="control-label">Search by text</label> 
 										<input type="text" class="form-control" id="fbtext" ng-model="text">
 									</div>
-									<div class="col-md-3">
+									<div class="col-sm-3 col-md-3">
 										<label for="fbtitle" class="control-label">Search by title</label>
 										<input type="text" class="form-control" id="fbtitle" ng-model="title">
 									</div>
-									<div class="col-md-3">
+									<div class="col-sm-3 col-md-3">
 										<label for="fblocation" class="control-label">Search by status</label>
 										<input type="text" class="form-control" id="fblocation" ng-model="status">
 									</div>
-									<div class="col-md-3">
+									<div class="col-sm-3 col-md-3">
 										<label for="fblocation" class="control-label">Search by facility</label>
 										<input type="text" class="form-control" id="fblocation" ng-model="facility">
 									</div>
@@ -210,18 +213,18 @@
 										<md-card ng-repeat="door in adoors | limitTo:totalDisplayed | filter:text | filter:title | filter:status | orderBy:myOrderBy">
 											<md-card-content>
 												<h2 class="md-title mt-40">{{ door.door_name }}</h2>
-												<p>{{ door.status == '1' ? 'Active' : 'Inactive' }}</p>
-												<p><a ui-sref="app.admin.device.device-details">{{ door.device }}</a></p>
-												<p style="height:auto;">{{ door.description | limitTo: 75 }}{{door.description.length > 75 ? '...' : ''}}</p>
+												<p class="mb-20">{{ door.status == '1' ? 'Active' : 'Inactive' }}</p>
+												<!-- <p><a ui-sref="app.admin.device.device-details">{{ door.device }}</a></p> -->
+												<!-- <p style="height:auto;">{{ door.description | limitTo: 75 }}{{door.description.length > 75 ? '...' : ''}}</p> -->
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.door.view-doors({door_id:door.door_id, type:'view'})">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.door.view-doors({door_id:door.door_id, type:'edit'})">Edit</a>
+												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.door.edit-door({door_id:door.door_id, type:'edit'})">Edit</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event, door.door_id)">Delete</a>
 											</div>
 										</md-card>										
 									</md-content>
-									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="listDoors()" ng-style="lmbtn">Load more</button>
+									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
