--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -96,13 +96,14 @@
 										<form name="addFacility" role="form" ng-validate>
 											<div class="modal-header"><h4 class="modal-title custom-font">Add Facility</h4></div>
 											<div class="modal-body mt-5">
+												<span class="error">{{masters}}</span>
 												<div class="form-group">
 													<label for="">Facility Name</label>
-													<input type="text" name="" ng-model="facility.facility_name" id="" class="form-control" placeholder="" required>
+													<input type="text" name="facility_name" ng-model="facility.facility_name" id="" class="form-control" placeholder="" required>
 												</div>
 												<div class="form-group">
 													<label for="">Facility Location</label>
-													<input type="text" name="" id="" ng-model="facility.facility_location" class="form-control" placeholder="" required>
+													<input type="text" name="facility_location" id="" ng-model="facility.facility_location" class="form-control" placeholder="" required>
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
@@ -121,7 +122,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Zip Code</label>
-														<input type="text" name="" id="" ng-model="facility.zip_code" class="form-control" placeholder="" required>
+														<input type="text" name="zip_code" id="" ng-model="facility.zip_code" class="form-control" placeholder="" required>
 													</div>
 												</div>
 												<div class="form-group">
@@ -133,7 +134,7 @@
 												</div>												
 											</div>
 											<div class="modal-footer">
-												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" id="cancel" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Cancel</button>
+												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" id="cancel_facility" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Cancel</button>
 												<button type="submit" ng-click="save(facility,addFacility)" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
 											</div>
 										</form>		
