--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -263,7 +263,7 @@
 								<div class="glview">
 									<md-content>			
 										<md-card ng-repeat="user in usergroups | filter:text | filter:title | filter:facility | orderBy:myOrderBy">
-											<img ng-src="{{imagePath}}/usergroups/{{user.imagename}}.jpg" class="md-card-image img100percent" alt="Washed Out">
+											<img ng-src="http://elikastaging.ml/images/usergroups/housekeeping.jpg" class="md-card-image img100percent" alt="Washed Out">
 											<md-card-content>
 												<h2 class="md-title">{{ user.usergroup_name }}</h2>	
 												<p>{{ user.usergroup_user_count }} Users</p>
