--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -12,7 +12,7 @@
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
-									<p>{{page.subtitle}}</p>									
+									<!-- <p>{{page.subtitle}}</p> -->									
 								</div>
 							</div>
 						</div>
@@ -137,7 +137,10 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Facility</label><br/>
-														<input type="text" class="form-control" value="{{FacilityName}}" disabled/>
+														<!-- <input type="text" class="form-control" value="{{FacilityName}}" disabled/> -->
+														<select class="form-control" ng-model="device.facility_id" ng-init="device.facility_id = " ng-options="item.facility_id as item.facility_name for item in facilityList">
+															<option value="">Select</option>
+														</select>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Technician</label><br/>
@@ -145,6 +148,14 @@
 															<option value="">Select</option>
 														</select>
 														<small class="pull-right"><a ng-click="cancel()" ui-sref="app.subadmin.support.technician">Add Technician</a></small>
+													</div>
+												</div>
+												
+												<div class="row">
+													<div class="col-md-12">
+														<label for="">Doors</label><br/><!--doorList-->
+														<select ng-model="device.door_id" multiple chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in doorList">
+														</select>
 													</div>
 												</div>
 											</div>
@@ -259,7 +270,7 @@
 												<a ui-sref="app.admin.device.service-plan"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
 												<a ui-sref="app.admin.settings({device_id:device.device_id})"><i class="fa fa-cog" aria-hidden="true"></i></a>
 											</span>
-											<a ui-sref="app.admin.device.device-details({device_id:device.device_id})"><img ng-src="images/device/1.jpg" class="md-card-image" alt="Washed Out"></a>
+											<a ui-sref="app.admin.device.device-details({device_id:device.device_id})"><img ng-src="images/device/elika-76-bronze.png" class="md-card-image" alt="Washed Out"></a>
 											<md-card-content>
 												<h2 class="md-title">{{ device.device_name }}</h2>
 												<p>{{ device.device_model }}</p>
