--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -12,7 +12,7 @@
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
-									<p>{{page.subtitle}}</p>									
+									<!-- <p>{{page.subtitle}}</p> -->									
 								</div>
 							</div>
 						</div>
@@ -99,20 +99,19 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6 first">
 														<label for="">Name</label>
-														<input type="text" name="" id="" class="form-control" ng-model="door.name" placeholder="">
+														<input type="text" name="" id="" class="form-control" ng-model="door.name" placeholder="" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6 last">
 														<label for="">Facility</label><br/>
-														<select class="form-control" disabled>
-															<option selected>USA Corporate Services</option>
-															<option>Aerzen USA Corporation</option>
+														<select class="form-control" ng-model="door.facility_id" ng-init="door.facility_id = facilityId" ng-options="item.facility_id as item.facility_name for item in facilityList" required>
+															<option value="">Select</option>
 														</select>
 													</div>
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6 first">
 														<label for="">Device Type</label><br/>
-														<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
+														<div class="btn-group btnrounded" ng-init="door.status = 1">
 															<label class="btn btn-default" ng-model="door.status" uib-btn-radio="1">Active</label>
 															<label class="btn btn-default" ng-model="door.status" uib-btn-radio="0">Inactive</label>
 														</div>
@@ -150,8 +149,8 @@
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
 										<div class="col-sm-8 col-md-9 search">
-											<input type="text" class="form-control" placeholder="Search by text....">
-											<button class="btn btn-default br-2-r" type="button">Search</button>
+											<input type="text" class="form-control" placeholder="Search by text...." ng-model="searchText" placeholder="Search by text...." ng-keyup="searchFunction($event)">
+											<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
 										</div>
 										<div class="col-sm-4 col-md-3 profilephoto csvupload">
 											<div ng-controller="ModalDemo1Ctrl">
@@ -224,7 +223,7 @@
 											</div>
 										</md-card>										
 									</md-content>
-									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
+									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="listDoors()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
